--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "cmgdragon",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^10.1.0",
+    "postcss-modules": "^4.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
