--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A multilevel navbar for your react project.",
   "main": "index.html",
   "scripts": {
-    "webpack:dev": "webpack serve",
+    "webpack:dev": "webpack serve --mode development",
     "webpack:build": "webpack --mode production",
     "clean": "rimraf build",
     "dev": "npm-run-all clean webpack:dev",
@@ -13,7 +13,6 @@
   "author": "cmgdragon",
   "license": "ISC",
   "dependencies": {
-    "@babel/runtime": "^7.12.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
@@ -21,17 +20,15 @@
     "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
-    "autoprefixer": "^10.1.0",
+    "@emotion/babel-plugin": "^11.1.2",
+    "@emotion/babel-preset-css-prop": "^11.0.0",
+    "@emotion/react": "^11.1.4",
+    "@emotion/styled": "^11.0.0",
     "babel-loader": "^8.2.2",
     "browserslist": "^4.16.0",
-    "css-loader": "^5.0.1",
     "html-webpack-plugin": "^4.5.0",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.2.1",
-    "postcss-loader": "^4.1.0",
-    "postcss-modules": "^4.0.0",
     "rimraf": "^3.0.2",
-    "style-loader": "^2.0.0",
     "webpack": "^5.11.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0"
