--- a/package.json
+++ b/package.json
@@ -2,29 +2,31 @@
   "name": "react-multilevel-navbar",
   "version": "1.0.0",
   "description": "A multilevel navbar for your react project.",
-  "main": "index.html",
+  "main": "dist/index.js",
   "scripts": {
     "webpack:dev": "webpack serve --mode development",
     "webpack:build": "webpack --mode production",
     "clean": "rimraf build",
     "dev": "npm-run-all clean webpack:dev",
-    "build": "npm-run-all clean webpack:build"
+    "build": "npm-run-all clean webpack:build",
+    "babel": "npx babel src/components/* -d dist/components && npx babel src/styled-components/* -d dist/styled-components && npx babel src/publish.js > dist/index.js"
   },
   "author": "cmgdragon",
   "license": "ISC",
   "dependencies": {
-    "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "@emotion/react": "^11.1.4",
+    "@emotion/styled": "^11.0.0"
   },
   "devDependencies": {
+    "prop-types": "^15.7.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "@babel/cli": "^7.12.10",
     "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
     "@emotion/babel-plugin": "^11.1.2",
     "@emotion/babel-preset-css-prop": "^11.0.0",
-    "@emotion/react": "^11.1.4",
-    "@emotion/styled": "^11.0.0",
     "babel-loader": "^8.2.2",
     "browserslist": "^4.16.0",
     "html-webpack-plugin": "^4.5.0",
@@ -37,5 +39,14 @@
   "browserslist": [
     "last 1 version",
     ">1%"
-  ]
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cmgdragon/react-multilevel-navbar.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/cmgdragon/react-multilevel-navbar/issues"
+  },
+  "homepage": "https://github.com/cmgdragon/react-multilevel-navbar#readme"
 }
